<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Fast</string>
    <string name="fast_messenger" translatable="false">Fast Messenger</string>
    <string name="message_attachments_many">Attachments</string>
    <string name="error_occurred">Error occurred</string>
    <string name="error_occurred_description">Error: %s</string>
    <string name="title_error">Error</string>
    <string name="password_login_hint">Password</string>
    <string name="captcha_hint">Captcha code</string>
    <string name="input_captcha">Input code from picture</string>
    <string name="login_hint">Login</string>
    <string name="error_empty_field">Field must not be empty</string>
    <string name="code_hint">Code</string>
    <string name="input_validation_code">Input code from sms</string>
    <string name="you_message_prefix">You</string>
    <string name="message_geo">Geolocation</string>
    <string name="message_geo_point">Point</string>
    <string name="forwarded_message">Message</string>
    <string name="forwarded_messages">Messages</string>
    <string name="no_messages">No messages</string>
    <string name="messages_self_destructed">Messages self-destructed</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="year_short">Y</string>
    <string name="month_short">M</string>
    <string name="week_short">W</string>
    <string name="day_short">D</string>
    <string name="time_now">Now</string>
    <string name="message_input_hint">Start typing here&#8230;</string>
    <string name="input_login_hint">Input login</string>
    <string name="input_password_hint">Input password</string>
    <string name="input_code_hint">Input code</string>
    <string name="validation_required">Validation required</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="token_expired">Access token expired</string>
    <string name="message_action_chat_created">%s created «%s»</string>
    <string name="message_action_chat_renamed">%s renamed chat to «%s»</string>
    <string name="message_action_chat_photo_update">%s updated the chat photo</string>
    <string name="message_action_chat_photo_remove">%s deleted the chat photo</string>
    <string name="message_action_chat_user_left">%s left the chat</string>
    <string name="message_action_chat_user_kicked">%s kicked %s</string>
    <string name="message_action_chat_user_returned">%s returned to chat</string>
    <string name="message_action_chat_user_invited">%s invited %s</string>
    <string name="message_action_chat_user_joined_by_link">%s joined the chat via link</string>
    <string name="message_action_chat_user_joined_by_call">%s joined the call</string>
    <string name="message_action_chat_user_joined_by_call_link">%s joined the call via link</string>
    <string name="message_action_chat_pin_message">%s pinned message</string>
    <string name="message_action_chat_unpin_message">%s unpinned message</string>
    <string name="message_action_chat_screenshot">%s took a screenshot</string>
    <string name="message_action_chat_style_update">%s changed chat theme</string>
    <string name="message_attachments_photo_one">Photo</string>
    <string name="message_attachments_photo_few">%d photos</string>
    <string name="message_attachments_photo_many">%d photos</string>
    <string name="message_attachments_photo_other">%d photos</string>
    <string name="message_attachments_video_one">Video</string>
    <string name="message_attachments_video_few">%d videos</string>
    <string name="message_attachments_video_many">%d videos</string>
    <string name="message_attachments_video_other">%d videos</string>
    <string name="message_attachments_audio_one">Audio</string>
    <string name="message_attachments_audio_few">%d audios</string>
    <string name="message_attachments_audio_many">%d audios</string>
    <string name="message_attachments_audio_other">%d audios</string>
    <string name="message_attachments_files_one">File</string>
    <string name="message_attachments_files_few">%d files</string>
    <string name="message_attachments_files_many">%d files</string>
    <string name="message_attachments_files_other">%d files</string>
    <string name="message_attachments_audio_message">Voice message</string>
    <string name="message_attachments_link">Link</string>
    <string name="message_attachments_mini_app">Mini App</string>
    <string name="message_attachments_sticker">Sticker</string>
    <string name="message_attachments_gift">Gift</string>
    <string name="message_attachments_wall">Post</string>
    <string name="message_attachments_graffiti">Graffiti</string>
    <string name="message_attachments_poll">Poll</string>
    <string name="message_attachments_wall_reply">Wall comment</string>
    <string name="message_attachments_call">Call</string>
    <string name="message_attachments_call_in_progress">Current call</string>
    <string name="message_attachments_event">Event</string>
    <string name="message_attachments_curator">Curator</string>
    <string name="message_attachments_story">Story</string>
    <string name="message_attachments_widget">Widget</string>
    <string name="message_attachments_place">Place</string>
    <string name="message_attachments_artist">Artist</string>
    <string name="message_attachments_audio_playlist">Playlist</string>
    <string name="message_attachments_podcast">Podcast</string>
    <string name="chat_interaction_uploading_file">Uploading file</string>
    <string name="chat_interaction_uploading_photo">Uploading photo</string>
    <string name="chat_interaction_uploading_video">Uploading video</string>
    <string name="chat_interaction_typing">Typing</string>
    <string name="chat_interaction_recording_audio_message">Recording</string>
    <string name="chat_interaction_chat_typing">%s are typing</string>
    <string name="chat_interaction_chat_single_typing">%s is typing</string>
    <string name="file_size_in_bytes">%d bytes</string>
    <string name="post_type_community">Community post</string>
    <string name="post_type_user">User post</string>
    <string name="post_type_unknown">Post</string>
    <string name="log_out">Log out</string>
    <string name="confirm">Confirmation</string>
    <string name="sign_out_confirm">Signing out will delete all data related to this account from this device. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_context_action_reply">Reply</string>
    <string name="message_context_action_mark_as_important">Mark as important</string>
    <string name="message_context_action_unmark_as_important">Unmark as important</string>
    <string name="time_format">Time: %s</string>
    <string name="message_context_action_pin">Pin</string>
    <string name="message_context_action_unpin">Unpin</string>
    <string name="message_context_action_edit">Edit</string>
    <string name="message_context_action_delete">Delete</string>
    <string name="confirm_delete_message">Delete the message?</string>
    <string name="message_delete_for_all">Delete for all</string>
    <string name="message_mark_as_spam">Mark as spam</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_delete">Delete</string>
    <string name="conversation_context_action_delete">Delete</string>
    <string name="confirm_delete_conversation">Delete the conversation?</string>
    <string name="action_sign_out">Sign out</string>
    <string name="sign_out_confirm_title">Sign out?</string>
    <string name="conversation_context_action_unpin">Unpin</string>
    <string name="conversation_context_action_pin">Pin</string>
    <string name="confirm_unpin_conversation">Unpin the conversation?</string>
    <string name="confirm_pin_conversation">Pin the conversation?</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="message_call_type_outgoing">Outgoing call</string>
    <string name="message_call_type_incoming">Incoming call</string>
    <string name="message_call_state_ended">Ended</string>
    <string name="message_call_state_cancelled">Cancelled</string>
    <string name="message_call_state_missed">Missed</string>
    <string name="message_call_unknown">Unknown</string>
    <string name="confirm_pin_message">Pin the message?</string>
    <string name="confirm_unpin_message">Unpin the message?</string>
    <string name="title_messages">Messages</string>
    <string name="title_forwarded_messages">Forwarded messages</string>
    <string name="title_settings">Settings</string>
    <string name="message_attachment_story_your_story">Your story</string>
    <string name="message_attachment_story_story_from">Story from\n%s</string>
    <string name="favorites">Favorites</string>
    <string name="pref_updates_check_update_summary">Current version: %s</string>
    <string name="fragment_updates_changelog_none">Changelog is missing</string>
    <string name="fragment_updates_changelog">Show changelog</string>
    <string name="fragment_updates_check_updates">Check updates</string>
    <string name="fragment_updates_install">Install</string>
    <string name="fragment_updates_download_update">Download</string>
    <string name="fragment_updates_try_again">Try again</string>
    <string name="fragment_updates_new_version">New version available!</string>
    <string name="fragment_updates_downloaded">Update downloaded!</string>
    <string name="fragment_updates_new_version_description">v. %s</string>
    <string name="fragment_updates_no_updates">No updates</string>
    <string name="fragment_updates_issues_installing">Issues with installing?</string>
    <string name="fragment_updates_no_updates_description">Try again later</string>
    <string name="fragment_updates_unknown_sources_disabled_message">Unknown sources installing is disabled in the settings. Open settings?</string>
    <string name="fragment_updates_downloading_update">Downloading update…</string>
    <string name="fragment_updates_issues_description">In case of any kind of problem related to installing new version you can delete and then re-download executable *.apk file. Proceed?</string>
    <string name="fragment_updates_file_not_found_description">Installed executable *.apk file not found. Try to re-download it</string>
    <string name="warning">Warning</string>
    <string name="app_crash_occurred">Crash occurred</string>
    <string name="app_crash_comment_prompt">Leave a comment</string>
    <string name="app_crash_report">Report</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="copy" tools:override="true">Copy</string>
    <string name="share">Share</string>
    <string name="pref_message_fast_text_summary">Text that will be inserted into the input field on emoji button long click\nCurrent value: %s</string>
    <string name="message_update_time_short">upd %s</string>
    <string name="fast_login_title">Fast login</string>
    <string name="fast_login_hint">$login;$password</string>
    <string name="confirm_remove_chat_user">Are you sure you want to remove this member?</string>
    <string name="user_banned_error">User banned</string>
    <string name="blocking_reason_title">Blocking reason</string>
    <string name="account_temporarily_blocked">Account temporarily blocked</string>
    <string name="user_name">User name</string>
    <string name="sign_in_to_vk">Sign in to VK</string>
    <string name="easter_egg_log_out_dmitry" translatable="false">Выйти внаружу?</string>
    <string name="action_search">Search</string>
    <string name="action_stop">Stop</string>
    <string name="value">Value</string>
</resources>