<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_round_close_24"
        app:navigationIconTint="?colorOnBackground"
        app:title="@string/warning" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="title,name_title,name,reason_title,reason"
        app:flow_verticalGap="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_temporarily_blocked"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="6dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        tools:text="@tools:sample/full_names" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reason_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="6dp"
        android:text="@string/blocking_reason_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        tools:text="Suspicious activity" />

</androidx.constraintlayout.widget.ConstraintLayout>